# src/controllers/index.js
@@ -1,1 +1,3 @@
+module.exports.adminController = require('./admin.controller');
 module.exports.authController = require('./auth.controller');
+module.exports.houseController = require('./house.controller');
